src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Lead_Import_Id__c</fullName>
        <description>Import Id of the Lead</description>
        <inlineHelpText>Import Id from the Lead</inlineHelpText>
        <label>Lead Import Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Classes__c</fullName>
        <description>Number of Classes Taught</description>
        <inlineHelpText>Number of Classes Taught</inlineHelpText>
        <label>Number of Classes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students__c</fullName>
        <description>Number of Students</description>
        <inlineHelpText>Number of Students</inlineHelpText>
        <label>Number of Students</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packages_Downloaded__c</fullName>
        <label>Packages Downloaded</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLCL_Programs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Receive_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact to receive the newsletter</description>
        <inlineHelpText>Contact to receive the newsletter</inlineHelpText>
        <label>Receive Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role of contact</description>
        <inlineHelpText>Role of contact</inlineHelpText>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>